--- a/Views/Home/this_movie.cshtml
+++ b/Views/Home/this_movie.cshtml
@@ -5,12 +5,12 @@
 }
 
 <div class="text-center">
-    <h1>About the movie</h1>
+    <h1>@Model.Title</h1>
 
     <div>
-        @Model.Title <br>
-        @Model.Genre <br>
-        @Model.ReleaseYear <br>
+        <strong>Title: </strong>@Model.Title <br>
+        <strong>Genre: </strong>@Model.Genre <br>
+        <strong>Releaseyear: </strong>@Model.ReleaseYear <br>
         
         @foreach (var actor in Model.Actors)
         {
