--- a/Views/Home/three_actors_oldest.cshtml
+++ b/Views/Home/three_actors_oldest.cshtml
@@ -4,11 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Movies with 3 actors</h1>
-</div>
 
-<h5>Movies with at least three actors, sort by oldest movies</h5>
-
-<div>
     @{
         var movies = Movie
             .GetAllMovies()
@@ -16,19 +12,26 @@
         
         var count = 0;
 
+        foreach (var movie in movies)
+        {
+            if (movie.ReleaseYear < 2000)
+            {
+                count++;     
+            }
+        }
+
+        <br><p>Number of movies in this list: @count</p>
+
         foreach (var item in movies)
         {
             if (item.ActorList.Count() == 3)
             {
-                <li>
+                <ul>
                     <a href="/Home/this_movie/@(item.Id)">@item.Title</a> 
                     @item.ReleaseYear<br>
-                </li>
-
-                count++;
+                </ul>
             }
         }
     }
 
-    <br><p>Number of movies in this list: @count</p> 
 </div>
